[package]
name = "hello_triangle"
version = "0.1.0"
authors = ["luhem7 <mehul.gang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22"
winit = "0.20"
futures = "0.3.4"
glsl-to-spirv = "0.1"

[dependencies.wgpu]
version = "0.5.0"
features = ["vulkan"]
 